# private-universities-sms

./: .gitignore  README.md  conftest.py  dev-requirements.txt  graphs.dot  manage.py  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.mjs  webpack.config.js
apps/areas/: filters.py  forms.py  managers.py  models.py  resources.py  serializers.py
apps/cities/: admin.py  constants.py  filters.py  forms.py  managers.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
apps/core/: admin.py  apps.py  auth.py  choices.py  constants.py  content_settings.py  exceptions.py  fields.py  filter_backends.py  filters.py  forms.py  inline.py  managers.py  middlewares.py  models.py  pagination.py  permissions.py  querysets.py  resources.py  schemas.py  signals.py  urls.py  utils.py  validators.py  views.py  widgets.py
apps/edu/: apps.py  forms.py  resources.py
apps/fin/: apps.py  resources.py  utils.py
apps/geo/: admin.py  apps.py  filters.py  forms.py  formsets.py  managers.py  models.py  resources.py  serializers.py
apps/governorates/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
apps/hr/: apps.py  choices.py  resources.py
apps/org/: apps.py  forms.py  resources.py
apps/reports/: forms.py  models.py  urls.py
apps/trans/: apps.py  resources.py  utils.py
assets/css/: input.css  main.css
assets/js/: index.js
project/: constants.py  router.py  urls.py
scripts/: data.yaml  db_brackets.py  employees_data.xlsx  generate_long_voucher.py  import_employees.py  main.py  reset_activities.py  update_images.py
static/: main.min.css  main.min.js  main.min.js.LICENSE.txt  manifest.json
templates/: 403.html  classes.html
tests/: common.py  conftest.py  utils.py
(+1198 files in other folders)
